--- a/about.html
+++ b/about.html
@@ -2,15 +2,20 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
+    <style>
+        p{
+            text-align: center;
+        }
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chi siamo - Blog del Gatto</title>
+    <title>Cat's Life</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
 <body>
     <header>
-        <h1>Blog del gatto</h1>
+        <h1>Cat's Life</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -22,11 +27,14 @@
     </header>
     <main>
         <section id="about">
-            <p>Benvenuti al Blog del Gatto! Siamo appassionati di gatti e vogliamo condividere con voi tutte le nostre conoscenze e esperienze sui nostri amici felini.</p>
+            <p >Benvenuti su Cat's Life! <br>
+               Sono Elisa Bertuzzi, studentessa di quinto anno dell'istituto tecnico Itis Cannizzaro a Rho e ho deciso <br>
+            di creare questo Blog per raccontare quello che so sui gatti, in quanto sono molto affascinata da queste creature! <br>
+          Sono stata volotaria per un anno al gattile di Rho, ho imparato molto e voglio condividere tutto ciò che ho appreso.  </p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Blog del Gatto. Tutti i diritti riservati.</p>
+        <p>&copy; 2024 Cat's Life. Tutti i diritti riservati.</p>
     </footer>
 </body>
 </html>
