--- a/blog1.html
+++ b/blog1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chi siamo - Blog del Gatto</title>
+    <title>Cat's Life</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
     <style>
@@ -32,7 +32,7 @@
 </head>
 <body >
     <header>
-        <h1>Blog del gatto</h1>
+        <h1>Cat's Life</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -124,7 +124,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Blog del Gatto. Tutti i diritti riservati.</p>
+        <p>&copy; 2024 Cat's Life. Tutti i diritti riservati.</p>
     </footer>
 </body>
 </html>
