--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
+    <style>
+        p{
+            text-align: center;
+        }
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contatti - Blog del Gatto</title>
+    <title>Cat's Life</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
 <body>
     <header>
-        <h1>Blog del gatto</h1>
+        <h1>Cat's Life</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -21,11 +26,11 @@
     </header>
     <main>
         <section id="contact">
-            <p>Per qualsiasi informazione, non esitate a contattarci all'indirizzo email: info@catsLife.it</p>
+            <p> Per qualsiasi informazione, non esitate a contattarmi all'indirizzo email:     bertuzzielisa.private@gmail.com</p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Blog del Gatto. Tutti i diritti riservati.</p>
+        <p>&copy; 2024 Cat's Life. Tutti i diritti riservati.</p>
     </footer>
 </body>
 </html>
